--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "mongoose": "^6.5.2",
     "ng": "^0.0.0",
     "ngx-cookie-service": "^14.0.1",
-    "primeicons": "^5.0.0",
-    "primeng": "^14.0.1",
+    "primeicons": "5.0.0",
+    "primeng": "14.0.1",
     "rxjs": "~7.5.0",
     "swagger-jsdoc": "^6.2.7",
     "swagger-ui-express": "^4.6.0",
