--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "nodemon ./server/index.js",
-    "dev": "ng build && nodemon ./server/index.js --watch"
+    "server": "node ./server/index.js",
+    "dev": "ng build && nodemon ./server/index.js "
   },
   "private": true,
   "dependencies": {
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "angular": "^1.8.3",
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "ng": "^0.0.0",
