--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "server": "node ./server/index.js",
-    "dev": "ng build && nodemon ./server/index.js "
+    "dev": "ng build && nodemon ./server/index.js",
+    "render-deploy": "ng build --configuration=production"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +36,10 @@
     "swagger-ui-express": "^4.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
+  },
+  "engines": {
+    "node": "16.15.1",
+    "npm": "8.11.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.5",
